# GameCollecter

./: CMakeLists.txt  README.md  main.cpp
Collector/CollectorButton/: SelectGameButton.cpp  SelectGameButton.h
Collector/CollectorWindow/: BeginWidget.cpp  BeginWidget.h  CollectorWindow.cpp  CollectorWindow.h  SelectGameWidget.cpp  SelectGameWidget.h
Data/ConstData/: GameConstData.h
Games/AirplaneGame/: AirplaneGame.cpp  AirplaneGame.h
Games/Common/: GameWidget.h
